grid.css
@CHARSET "ISO-8859-1";

#grid {
	border: 0px;
	border-spacing: 10px
}

.qm {
	width: 150px;
	height: 112px;
	border: 1px rgb(0, 0, 0) solid;
}

.thumb {
	width: 150px;
	height: 112px;
	border: 1px rgb(0, 0, 255) solid;
	cursor: hand;
}

